force-app/main/default/objects/Crm_Service__c/Crm_Service__c.object-meta.xml
<CustomObject>
    <label>Crm Service</label>
    <nameField>
        <label>Crm Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crm Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>