force-app/main/default/objects/Crm_Service__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Provide Service Description</description>
    <inlineHelpText>Provide Service Description</inlineHelpText>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>