force-app/main/default/objects/Crm_Service__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark a service active when its functional. Franework will pick active services</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>