force-app/main/default/objects/Crm_Service__c/fields/Payload_Validator__c.field-meta.xml
<CustomField>
    <fullName>Payload_Validator__c</fullName>
    <label>Payload Validator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>