force-app/main/default/objects/Crm_Service__c/fields/Request_Model__c.field-meta.xml
<CustomField>
    <fullName>Request_Model__c</fullName>
    <inlineHelpText>Model apex class full name to which request payload will be deserialized</inlineHelpText>
    <label>Request Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>