force-app/main/default/objects/Crm_Service__c/fields/Service_Handler__c.field-meta.xml
<CustomField>
    <fullName>Service_Handler__c</fullName>
    <inlineHelpText>Apex Class that will handle the service request, They all must implement IServiceHandler interface and override handle method.</inlineHelpText>
    <label>Service Handler</label>
    <length>100</length>
    <type>Text</type>
</CustomField>