force-app/main/default/objects/Crm_Service__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Dev</fullName>
            </value>
            <value>
                <fullName>In QA</fullName>
            </value>
            <value>
                <fullName>In Prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>