force-app/main/default/objects/Crm_Service__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <inlineHelpText>Count of how many calls are made to this service</inlineHelpText>
    <label>Usage</label>
    <summaryForeignKey>Crm_Service_Usage__c.Crm_Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>